8195801: Replace jdk.internal.misc.Unsafe with sun.misc.Unsafe in MarlinFX
Reviewed-by: mchung, lbourges